Update CSS to fix article and aside on mobile.

--- a/styles.css
+++ b/styles.css
@@ -251,12 +251,12 @@ Mobile Breakpoint Section - Any special mobile styles here.
     }
 
     main article {
-        width: 100%;
+        width: 96%;
         padding: 2%;
     }
     
     main aside {
-        width: 100%;
+        width: 96%;
         padding: 2%;
     }
     
